Refactor code style for consistency and readability across multiple files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <h3>TDS Currency Converter</h3>
-  <router-outlet />
+	<h3>Currency Converter</h3>
+	<router-outlet />
 </div>
