Refactor README and update styles for consistency; enhance converter component layout and theme service

--- a/src/app/components/converter/converter.component.html
+++ b/src/app/components/converter/converter.component.html
@@ -2,63 +2,73 @@
 	<app-error [message]="store.error()"></app-error>
 }
 <div class="converter-container">
-	<form [formGroup]="form" (ngSubmit)="formSubmit()">
+	<form [formGroup]="form">
 		<div class="input-fields">
-			<div class="converter-amount">
-				<mat-form-field>
-					<mat-label> Convert </mat-label>
-					<input
-						matInput
-						type="number"
-						step="0.01"
-						min="0"
-						formControlName="toBeConverted"
-						placeholder="Enter amount"
-					/>
-				</mat-form-field>
-			</div>
 			@if (store.currencies()) {
 				<div class="converter-currencies">
-					<div class="base-currency">
-						<mat-form-field>
-							<mat-label>Base currency</mat-label>
-							<mat-select formControlName="baseCurrency">
-								@for (currency of store.currencies(); track currency.id) {
-									<mat-option [value]="currency.short_code">{{
-										currency.name
-									}}</mat-option>
-								}
-							</mat-select>
-						</mat-form-field>
+					<div class="baseCurrency-container">
+						<div class="converter-amount">
+							<mat-form-field>
+								<input
+									matInput
+									type="number"
+									step="0.01"
+									min="0"
+									formControlName="toBeConverted"
+									placeholder="Enter amount"
+								/>
+							</mat-form-field>
+						</div>
+						<div class="base-currency">
+							<mat-form-field>
+								<mat-select
+									formControlName="baseCurrency"
+									(selectionChange)="formSubmit()"
+								>
+									@for (currency of store.currencies(); track currency.id) {
+										<mat-option [value]="currency.short_code">{{
+											currency.name
+										}}</mat-option>
+									}
+								</mat-select>
+							</mat-form-field>
+						</div>
 					</div>
-					<div class="targetCurrency">
-						<mat-form-field>
-							<mat-label>Target currency</mat-label>
-							<mat-select formControlName="targetCurrency">
-								@for (currency of store.currencies(); track currency.id) {
-									<mat-option [value]="currency.short_code">{{
-										currency.name
-									}}</mat-option>
-								}
-							</mat-select>
-						</mat-form-field>
+					<div class="targetCurrency-container">
+						<div class="currency-value">
+							<mat-form-field>
+								<input
+									matInput
+									[value]="store.targetCurrencyValue() | number: '1.2-2'"
+									readonly
+								/>
+							</mat-form-field>
+						</div>
+						<div class="currency-select">
+							<mat-form-field>
+								<mat-select
+									formControlName="targetCurrency"
+									(selectionChange)="formSubmit()"
+								>
+									@for (currency of store.currencies(); track currency.id) {
+										<mat-option [value]="currency.short_code">{{
+											currency.name
+										}}</mat-option>
+									}
+								</mat-select>
+							</mat-form-field>
+						</div>
 					</div>
 				</div>
 			}
 		</div>
-		<div class="converter-button">
-			<button mat-raised-button type="submit" color="primary">Convert</button>
-		</div>
 	</form>
 
-	<mat-card class="converter-card">
-		<mat-card-header>
-			<mat-card-title>Converted Value</mat-card-title>
-		</mat-card-header>
+	<!-- <mat-card class="converter-card">
 		<mat-card-content>
 			<p>
 				<span>{{ store.targetCurrencyValue() | number: "1.2-2" }}</span>
 			</p>
 		</mat-card-content>
-	</mat-card>
+	</mat-card> -->
 </div>
