--- a/src/themes/custom-theme.scss
+++ b/src/themes/custom-theme.scss
@@ -1,25 +1,27 @@
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 @include mat.core();
 
 // Define the theme object.
-$custom-theme: mat.define-theme((
-  color: (
-    theme-type: light,
-    primary: mat.$azure-palette,
-    tertiary: mat.$blue-palette,
-  ),
-  density: (
-    scale: 0
-  )
-));
+$custom-theme: mat.define-theme(
+	(
+		color: (
+			theme-type: light,
+			primary: mat.$azure-palette,
+			tertiary: mat.$blue-palette,
+		),
+		density: (
+			scale: 0,
+		),
+	)
+);
 
 // Include theme styles for core and each component used in your app.
 // M3 themes must be wrapped in a selector
 html {
-  @include mat.all-component-themes($custom-theme);
+	@include mat.all-component-themes($custom-theme);
 }
 
 // You can also include themes for specific components if you want to optimize bundle size
@@ -32,14 +34,15 @@ html {
 
 // Custom theme variables you can use throughout your app
 html {
-  --primary-color: #{mat.get-theme-color($custom-theme, primary)};
-  --accent-color: #{mat.get-theme-color($custom-theme, tertiary)};
-  --warn-color: #{mat.get-theme-color($custom-theme, error)};
+	--primary-color: #{mat.get-theme-color($custom-theme, primary)};
+	--accent-color: #{mat.get-theme-color($custom-theme, tertiary)};
+	--warn-color: #{mat.get-theme-color($custom-theme, error)};
 }
 
 // Global styles that use the theme
-html, body {
-  margin: 0;
-  padding: 0;
-  font-family: mat.get-theme-typography($custom-theme, body-large, font-family);
+html,
+body {
+	margin: 0;
+	padding: 0;
+	font-family: mat.get-theme-typography($custom-theme, body-large, font-family);
 }
