--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,22 +1,23 @@
 /* Import the custom theme */
-@import './themes/custom-theme.scss';
-@import './themes/dark-theme.scss';
+@import "./themes/custom-theme.scss";
+@import "./themes/dark-theme.scss";
 
 /* You can add global styles to this file, and also import other style files */
 
 /* Global styles */
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+	margin: 0;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 /* Utility classes */
 .mat-elevation-z8 {
-  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0px 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+	box-shadow:
+		0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+		0px 8px 10px 1px rgba(0, 0, 0, 0.14),
+		0px 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
