--- a/src/app/components/converter/converter.component.html
+++ b/src/app/components/converter/converter.component.html
@@ -16,6 +16,7 @@
 									min="0"
 									formControlName="toBeConverted"
 									placeholder="Enter amount"
+									(change)="formSubmit()"
 								/>
 							</mat-form-field>
 						</div>
@@ -63,4 +64,5 @@
 			}
 		</div>
 	</form>
+
 </div>
