Refactor converter component: add ConverterDisplayComponent, update styles, and restructure HTML for improved layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
-	<h3>Currency Converter</h3>
+	<div class="heading">
+		Currency Converter</div>
 	<router-outlet />
 </div>
